fix highscore button align on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,13 @@ input{
     padding: 10px 0px;
   }
 
+  #view-high-score{
+    width: fit-content;
+    margin: 0px 0px;
+    padding: 0px 0px;
+    text-align: center;
+  }
+
   ul li button{
     text-align: center;
   }
